unpackaged/main/default/objects/project_cloud__Board_Process__c/project_cloud__Board_Process__c.object-meta.xml
<CustomObject>
    <label>Board Process</label>
    <nameField>
        <label>Board Process Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Board Processes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>