unpackaged/main/default/objects/project_cloud__Board_Process__c/fields/project_cloud__Business_Area__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Business_Area__c</fullName>
    <label>Business Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>project_cloud__Business_Area</valueSetName>
    </valueSet>
</CustomField>