unpackaged/main/default/objects/project_cloud__Board_Process__c/fields/project_cloud__Color_Tag_Set__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Color_Tag_Set__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Color Tag Set</label>
    <referenceTo>project_cloud__Color_Tag_Set__c</referenceTo>
    <relationshipLabel>Board Processes</relationshipLabel>
    <relationshipName>Board_Processes</relationshipName>
    <type>Lookup</type>
</CustomField>