unpackaged/main/default/objects/project_cloud__Board_Process__c/fields/project_cloud__IsActive__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field determines whether this process will be available when creating a new board.</description>
    <inlineHelpText>If checked, this Board Process is currently Active</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>